# pip-guard-

./: .gitignore  README.md  pyproject.toml
daytona/pip-package-security-checker/: codex-pip-checker.sh  configure_sandbox.py  provision.sh  push_assets.py  start-scan-service.sh
daytona/pip-package-security-checker/skill/: SKILL.md
daytona/pip-package-security-checker/skill/references/: checklist.md  report-template.md
daytona/pip-package-security-checker/workspace/: rebuild_job_artifacts.py  report_template.html  run_scan_job.py  scan_service.py  stage_pypi_release.py  verdict_schema.json
src/pip_guard/: __main__.py  cli.py
visuals/architecture/: README.md  pip_guard_architecture.py  render.sh
visuals/architecture/output/: pip-guard-architecture-report.html
