[project]
name = "pip-guard"
version = "0.1.0"
description = "protecting your pip"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich>=14.0.0",
]

[project.scripts]
pip-guard = "pip_guard.cli:main"

[project.optional-dependencies]
visuals = [
    "manim>=0.19,<0.20",
    "typing-extensions>=4.15.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
